[metadata]
name = Yong8
version = 0.0.1
author = Xrloong Wang
author_email = xrloong@gmail.com
description = 以限制滿足問題來建構漢字字形（Use Constraint Satisfaction Problem to Construct Hanzi Glyph）。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xrloong/Yong8
project_urls =
    Bug Tracker = https://github.com/xrloong/Yong8/issues
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

